  - Removed API functions (and implementations) for the old boundary-condition
    mechanism that involved the alpha/beta/gamma arguments. Replacement
    functions accept lists of prescribed values along with offsets into the
    field for which values are being specified. This is more intuitive, and
    the implementation code is more robust. As part of this, removed the
    fei_BCRecord.* and fei_BCManager.* files.
  - Removed the fei::Exception class. Now use std::runtime_error instead.
    Also removed feiPoolAllocator. Now use fei_Pool_alloc, which is more
    similar to a standard allocator.
  - Fixed a bug in fei_Aztec_LinSysCore.cpp where dirichlet boundary-condition
    enforcement was assuming that the structure of the matrix is symmetric.

 Oct 09 2008 minor version 2.23.01
  - Fixed a bug where fei::VectorSpace::getGlobalIndexOffsets would seg-fault
    if called before any initialization data had been input.
  - Fixed a bug in fei_Reducer.cpp where submatrix contributions were
    assumed to be symmetric.

 ??? ?? ???? version 2.24.00
  - 2.23.01 bug-fixes, plus:
  - Removed classes fei::CommCore, fei::CommUtilsBase, snl_fei::CommUtils. These
    are replaced by functions in fei_CommUtils.hpp. This is a simplification
    and cleanup of the communications-code infrastructure.
  - Changed several method APIs in fei::VectorSpace and fei::MatrixGraph,
    to replace the three-argument pattern
    (..., int alloc_len, int* array, int& used_len, ...)
    with simply passing in a reference to a std::vector. This is a much
    better mechanism for filling an array to return to the caller.
    There are still occurrences of the cumbersome three-argument pattern in
    various fei API's, but all of them will eventually be replaced.
  - Removed more occurences of feiArray, using std::vector instead. This
    effects the API in places where an array is a return value. Specifically
    in the snl_fei::Constraint class, methods like getMasterWeights(), etc.

